<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.example.android.learnquizapp.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00c853"
        android:padding="12dp"
        android:layout_marginBottom="6dp">

        <TextView
            android:id="@+id/welcome_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/welcome"
            android:textColor="#000000"
            android:textSize="20sp"
            android:visibility="visible" />


        <LinearLayout
            android:id="@+id/name_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/welcome_text_view"
            android:orientation="vertical"
            android:visibility="visible">

            <EditText
                android:id="@+id/name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:hint="Name"
                android:padding="12dp"
                android:inputType="textCapCharacters" />

            <Button
                android:id="@+id/name_button"
                android:onClick="begin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_gravity="center_horizontal"
                android:text="Begin"
                android:textAllCaps="true" />


        </LinearLayout>


        <LinearLayout
            android:id="@+id/score_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/welcome_text_view"
            android:visibility="invisible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="Score:"
                android:textColor="#000000"
                android:textAllCaps="true"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/score_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:text="0"
                android:textColor="#000000"
                android:textSize="20sp" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/correct_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:text="correct!\n+5 points"
                    android:gravity="center_horizontal"
                    android:textColor="#ff0000"
                    android:textSize="20sp"
                    android:visibility="invisible"/>

                <TextView
                    android:id="@+id/wrong_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:text="oops! wrong\n-2 points\ntry again"
                    android:textColor="#ff0000"
                    android:textSize="20sp"
                    android:visibility="invisible"/>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

    <ScrollView
        android:id="@+id/questions_scroll_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible">

        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/q1_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:background="#8bc34a"
                android:orientation="vertical"
                android:padding="12dp"
                android:visibility="visible">

                <ImageView
                    android:id="@+id/asa_image_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:scaleType="center"
                    android:src="@drawable/asa" />


                <TextView
                    android:id="@+id/question1_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/asa_image_view"
                    android:padding="12dp"
                    android:text="@string/question_1"
                    android:textColor="#000000" />


                <RadioGroup

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:verticalScrollbarPosition="defaultPosition">

                    <RadioButton
                        android:id="@+id/nigeria_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="6dp"
                        android:text="Nigeria" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="6dp"
                        android:text="South Africa" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="6dp"
                        android:text="Kenya" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="6dp"
                        android:text="Egypt" />
                </RadioGroup>


                <Button
                    android:id="@+id/q1_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="submit"
                    android:onClick="submitQuestion1"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"

                android:background="#8bc34a"
                android:orientation="vertical"
                android:padding="12dp">

                <ImageView
                    android:id="@+id/china_wall_image_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="center"
                    android:src="@drawable/china_wall" />


                <TextView
                    android:id="@+id/question2_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:text="@string/question_2"
                    android:textColor="#000000" />


                <RadioGroup

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:verticalScrollbarPosition="defaultPosition">

                    <RadioButton
                        android:id="@+id/china_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="6dp"
                        android:text="China" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="6dp"
                        android:text="Burkina Faso" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="6dp"
                        android:text="Italy" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="6dp"
                        android:text="London" />
                </RadioGroup>


                <Button
                    android:id="@+id/q2_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="submit"
                    android:onClick="submitQuestion2"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"

                android:background="#8bc34a"
                android:orientation="vertical"
                android:padding="12dp">


                <TextView
                    android:id="@+id/question3_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:text="@string/question_3"
                    android:textColor="#000000" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Kenya" />

                <CheckBox
                    android:id="@+id/togo_check_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Togo" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="South Africa" />

                <CheckBox
                    android:id="@+id/mali_check_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Mali" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Namibia" />


                <Button
                    android:id="@+id/q3_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="submit"
                    android:onClick="submitQuestion3"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:background="#8bc34a"
                android:orientation="vertical"
                android:padding="12dp">


                <TextView
                    android:id="@+id/question4_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:text="@string/question_4"
                    android:textColor="#000000" />


                <EditText
                    android:id="@+id/q4_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:hint="write your answer here"
                    android:inputType="textCapCharacters"
                    android:maxLines="1" />


                <Button
                    android:id="@+id/q4_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="submit"
                    android:onClick="submitQuestion4"/>

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Start Over"
                android:textAllCaps="true"
                android:onClick="reset" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>






